src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NEWLINE

Grammar

Rule 0     S' -> stmt_list_opt
Rule 1     while_stmt -> WHILE expr stmt_list END
Rule 2     stmt_list -> stmt
Rule 3     stmt_list -> stmt_list stmt
Rule 4     stmt -> expr_stmt
Rule 5     stmt -> if_stmt
Rule 6     stmt -> while_stmt
Rule 7     stmt -> BREAK
Rule 8     stmt -> CONTINUE
Rule 9     stmt -> function_stmt
Rule 10    expr_stmt -> expr SEMI
Rule 11    function_stmt -> FUNCTION ID EQ function_declr stmt_list END
Rule 12    function_declr -> ID LPAREN args_opt RPAREN
Rule 13    args_opt -> <empty>
Rule 14    args_opt -> args
Rule 15    args -> ID
Rule 16    args -> args COMMA ID
Rule 17    stmt_list_opt -> <empty>
Rule 18    stmt_list_opt -> stmt_list
Rule 19    expr -> LPAREN expr RPAREN
Rule 20    expr -> function_call
Rule 21    expr -> ID
Rule 22    expr -> NUMBER
Rule 23    expr -> STRING
Rule 24    expr -> expr1
Rule 25    expr -> expr2
Rule 26    function_call -> ID LPAREN expr_list_opt RPAREN
Rule 27    expr_list_opt -> <empty>
Rule 28    expr_list_opt -> expr_list
Rule 29    expr_list -> expr
Rule 30    expr_list -> expr_list COMMA expr
Rule 31    expr1 -> NEG expr
Rule 32    expr2 -> expr LT expr
Rule 33    expr2 -> expr AND expr
Rule 34    expr2 -> expr DIV expr
Rule 35    expr2 -> expr POW expr
Rule 36    expr2 -> expr GE expr
Rule 37    expr2 -> expr GT expr
Rule 38    expr2 -> expr LE expr
Rule 39    expr2 -> expr MINUS expr
Rule 40    expr2 -> expr MUL expr
Rule 41    expr2 -> expr OR expr
Rule 42    expr2 -> expr PLUS expr
Rule 43    expr2 -> expr EQ expr
Rule 44    expr2 -> expr EQEQ expr
Rule 45    if_stmt -> IF expr stmt_list_opt elseif_stmt END
Rule 46    elseif_stmt -> <empty>
Rule 47    elseif_stmt -> ELSE stmt_list_opt
Rule 48    elseif_stmt -> ELSEIF expr stmt_list_opt elseif_stmt

Terminals, with rules where they appear

AND                  : 33
BREAK                : 7
COMMA                : 16 30
CONTINUE             : 8
DIV                  : 34
ELSE                 : 47
ELSEIF               : 48
END                  : 1 11 45
EQ                   : 11 43
EQEQ                 : 44
FUNCTION             : 11
GE                   : 36
GT                   : 37
ID                   : 11 12 15 16 21 26
IF                   : 45
LE                   : 38
LPAREN               : 12 19 26
LT                   : 32
MINUS                : 39
MUL                  : 40
NEG                  : 31
NEWLINE              : 
NUMBER               : 22
OR                   : 41
PLUS                 : 42
POW                  : 35
RPAREN               : 12 19 26
SEMI                 : 10
STRING               : 23
WHILE                : 1
error                : 

Nonterminals, with rules where they appear

args                 : 14 16
args_opt             : 12
elseif_stmt          : 45 48
expr                 : 1 10 19 29 30 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 48
expr1                : 24
expr2                : 25
expr_list            : 28 30
expr_list_opt        : 26
expr_stmt            : 4
function_call        : 20
function_declr       : 11
function_stmt        : 9
if_stmt              : 5
stmt                 : 2 3
stmt_list            : 1 3 11 18
stmt_list_opt        : 45 47 48 0
while_stmt           : 6

Parsing method: LALR

state 0

    (0) S' -> . stmt_list_opt
    (17) stmt_list_opt -> .
    (18) stmt_list_opt -> . stmt_list
    (2) stmt_list -> . stmt
    (3) stmt_list -> . stmt_list stmt
    (4) stmt -> . expr_stmt
    (5) stmt -> . if_stmt
    (6) stmt -> . while_stmt
    (7) stmt -> . BREAK
    (8) stmt -> . CONTINUE
    (9) stmt -> . function_stmt
    (10) expr_stmt -> . expr SEMI
    (45) if_stmt -> . IF expr stmt_list_opt elseif_stmt END
    (1) while_stmt -> . WHILE expr stmt_list END
    (11) function_stmt -> . FUNCTION ID EQ function_declr stmt_list END
    (19) expr -> . LPAREN expr RPAREN
    (20) expr -> . function_call
    (21) expr -> . ID
    (22) expr -> . NUMBER
    (23) expr -> . STRING
    (24) expr -> . expr1
    (25) expr -> . expr2
    (26) function_call -> . ID LPAREN expr_list_opt RPAREN
    (31) expr1 -> . NEG expr
    (32) expr2 -> . expr LT expr
    (33) expr2 -> . expr AND expr
    (34) expr2 -> . expr DIV expr
    (35) expr2 -> . expr POW expr
    (36) expr2 -> . expr GE expr
    (37) expr2 -> . expr GT expr
    (38) expr2 -> . expr LE expr
    (39) expr2 -> . expr MINUS expr
    (40) expr2 -> . expr MUL expr
    (41) expr2 -> . expr OR expr
    (42) expr2 -> . expr PLUS expr
    (43) expr2 -> . expr EQ expr
    (44) expr2 -> . expr EQEQ expr

    $end            reduce using rule 17 (stmt_list_opt -> .)
    BREAK           shift and go to state 7
    CONTINUE        shift and go to state 8
    IF              shift and go to state 11
    WHILE           shift and go to state 12
    FUNCTION        shift and go to state 13
    LPAREN          shift and go to state 15
    ID              shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    NEG             shift and go to state 21

    stmt_list_opt                  shift and go to state 1
    stmt_list                      shift and go to state 2
    stmt                           shift and go to state 3
    expr_stmt                      shift and go to state 4
    if_stmt                        shift and go to state 5
    while_stmt                     shift and go to state 6
    function_stmt                  shift and go to state 9
    expr                           shift and go to state 10
    function_call                  shift and go to state 16
    expr1                          shift and go to state 19
    expr2                          shift and go to state 20

state 1

    (0) S' -> stmt_list_opt .



state 2

    (18) stmt_list_opt -> stmt_list .
    (3) stmt_list -> stmt_list . stmt
    (4) stmt -> . expr_stmt
    (5) stmt -> . if_stmt
    (6) stmt -> . while_stmt
    (7) stmt -> . BREAK
    (8) stmt -> . CONTINUE
    (9) stmt -> . function_stmt
    (10) expr_stmt -> . expr SEMI
    (45) if_stmt -> . IF expr stmt_list_opt elseif_stmt END
    (1) while_stmt -> . WHILE expr stmt_list END
    (11) function_stmt -> . FUNCTION ID EQ function_declr stmt_list END
    (19) expr -> . LPAREN expr RPAREN
    (20) expr -> . function_call
    (21) expr -> . ID
    (22) expr -> . NUMBER
    (23) expr -> . STRING
    (24) expr -> . expr1
    (25) expr -> . expr2
    (26) function_call -> . ID LPAREN expr_list_opt RPAREN
    (31) expr1 -> . NEG expr
    (32) expr2 -> . expr LT expr
    (33) expr2 -> . expr AND expr
    (34) expr2 -> . expr DIV expr
    (35) expr2 -> . expr POW expr
    (36) expr2 -> . expr GE expr
    (37) expr2 -> . expr GT expr
    (38) expr2 -> . expr LE expr
    (39) expr2 -> . expr MINUS expr
    (40) expr2 -> . expr MUL expr
    (41) expr2 -> . expr OR expr
    (42) expr2 -> . expr PLUS expr
    (43) expr2 -> . expr EQ expr
    (44) expr2 -> . expr EQEQ expr

    $end            reduce using rule 18 (stmt_list_opt -> stmt_list .)
    ELSE            reduce using rule 18 (stmt_list_opt -> stmt_list .)
    ELSEIF          reduce using rule 18 (stmt_list_opt -> stmt_list .)
    END             reduce using rule 18 (stmt_list_opt -> stmt_list .)
    BREAK           shift and go to state 7
    CONTINUE        shift and go to state 8
    IF              shift and go to state 11
    WHILE           shift and go to state 12
    FUNCTION        shift and go to state 13
    LPAREN          shift and go to state 15
    ID              shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    NEG             shift and go to state 21

    stmt                           shift and go to state 22
    expr_stmt                      shift and go to state 4
    if_stmt                        shift and go to state 5
    while_stmt                     shift and go to state 6
    function_stmt                  shift and go to state 9
    expr                           shift and go to state 10
    function_call                  shift and go to state 16
    expr1                          shift and go to state 19
    expr2                          shift and go to state 20

state 3

    (2) stmt_list -> stmt .

    BREAK           reduce using rule 2 (stmt_list -> stmt .)
    CONTINUE        reduce using rule 2 (stmt_list -> stmt .)
    IF              reduce using rule 2 (stmt_list -> stmt .)
    WHILE           reduce using rule 2 (stmt_list -> stmt .)
    FUNCTION        reduce using rule 2 (stmt_list -> stmt .)
    LPAREN          reduce using rule 2 (stmt_list -> stmt .)
    ID              reduce using rule 2 (stmt_list -> stmt .)
    NUMBER          reduce using rule 2 (stmt_list -> stmt .)
    STRING          reduce using rule 2 (stmt_list -> stmt .)
    NEG             reduce using rule 2 (stmt_list -> stmt .)
    $end            reduce using rule 2 (stmt_list -> stmt .)
    ELSE            reduce using rule 2 (stmt_list -> stmt .)
    ELSEIF          reduce using rule 2 (stmt_list -> stmt .)
    END             reduce using rule 2 (stmt_list -> stmt .)


state 4

    (4) stmt -> expr_stmt .

    BREAK           reduce using rule 4 (stmt -> expr_stmt .)
    CONTINUE        reduce using rule 4 (stmt -> expr_stmt .)
    IF              reduce using rule 4 (stmt -> expr_stmt .)
    WHILE           reduce using rule 4 (stmt -> expr_stmt .)
    FUNCTION        reduce using rule 4 (stmt -> expr_stmt .)
    LPAREN          reduce using rule 4 (stmt -> expr_stmt .)
    ID              reduce using rule 4 (stmt -> expr_stmt .)
    NUMBER          reduce using rule 4 (stmt -> expr_stmt .)
    STRING          reduce using rule 4 (stmt -> expr_stmt .)
    NEG             reduce using rule 4 (stmt -> expr_stmt .)
    $end            reduce using rule 4 (stmt -> expr_stmt .)
    ELSE            reduce using rule 4 (stmt -> expr_stmt .)
    ELSEIF          reduce using rule 4 (stmt -> expr_stmt .)
    END             reduce using rule 4 (stmt -> expr_stmt .)


state 5

    (5) stmt -> if_stmt .

    BREAK           reduce using rule 5 (stmt -> if_stmt .)
    CONTINUE        reduce using rule 5 (stmt -> if_stmt .)
    IF              reduce using rule 5 (stmt -> if_stmt .)
    WHILE           reduce using rule 5 (stmt -> if_stmt .)
    FUNCTION        reduce using rule 5 (stmt -> if_stmt .)
    LPAREN          reduce using rule 5 (stmt -> if_stmt .)
    ID              reduce using rule 5 (stmt -> if_stmt .)
    NUMBER          reduce using rule 5 (stmt -> if_stmt .)
    STRING          reduce using rule 5 (stmt -> if_stmt .)
    NEG             reduce using rule 5 (stmt -> if_stmt .)
    $end            reduce using rule 5 (stmt -> if_stmt .)
    ELSE            reduce using rule 5 (stmt -> if_stmt .)
    ELSEIF          reduce using rule 5 (stmt -> if_stmt .)
    END             reduce using rule 5 (stmt -> if_stmt .)


state 6

    (6) stmt -> while_stmt .

    BREAK           reduce using rule 6 (stmt -> while_stmt .)
    CONTINUE        reduce using rule 6 (stmt -> while_stmt .)
    IF              reduce using rule 6 (stmt -> while_stmt .)
    WHILE           reduce using rule 6 (stmt -> while_stmt .)
    FUNCTION        reduce using rule 6 (stmt -> while_stmt .)
    LPAREN          reduce using rule 6 (stmt -> while_stmt .)
    ID              reduce using rule 6 (stmt -> while_stmt .)
    NUMBER          reduce using rule 6 (stmt -> while_stmt .)
    STRING          reduce using rule 6 (stmt -> while_stmt .)
    NEG             reduce using rule 6 (stmt -> while_stmt .)
    $end            reduce using rule 6 (stmt -> while_stmt .)
    ELSE            reduce using rule 6 (stmt -> while_stmt .)
    ELSEIF          reduce using rule 6 (stmt -> while_stmt .)
    END             reduce using rule 6 (stmt -> while_stmt .)


state 7

    (7) stmt -> BREAK .

    BREAK           reduce using rule 7 (stmt -> BREAK .)
    CONTINUE        reduce using rule 7 (stmt -> BREAK .)
    IF              reduce using rule 7 (stmt -> BREAK .)
    WHILE           reduce using rule 7 (stmt -> BREAK .)
    FUNCTION        reduce using rule 7 (stmt -> BREAK .)
    LPAREN          reduce using rule 7 (stmt -> BREAK .)
    ID              reduce using rule 7 (stmt -> BREAK .)
    NUMBER          reduce using rule 7 (stmt -> BREAK .)
    STRING          reduce using rule 7 (stmt -> BREAK .)
    NEG             reduce using rule 7 (stmt -> BREAK .)
    $end            reduce using rule 7 (stmt -> BREAK .)
    ELSE            reduce using rule 7 (stmt -> BREAK .)
    ELSEIF          reduce using rule 7 (stmt -> BREAK .)
    END             reduce using rule 7 (stmt -> BREAK .)


state 8

    (8) stmt -> CONTINUE .

    BREAK           reduce using rule 8 (stmt -> CONTINUE .)
    CONTINUE        reduce using rule 8 (stmt -> CONTINUE .)
    IF              reduce using rule 8 (stmt -> CONTINUE .)
    WHILE           reduce using rule 8 (stmt -> CONTINUE .)
    FUNCTION        reduce using rule 8 (stmt -> CONTINUE .)
    LPAREN          reduce using rule 8 (stmt -> CONTINUE .)
    ID              reduce using rule 8 (stmt -> CONTINUE .)
    NUMBER          reduce using rule 8 (stmt -> CONTINUE .)
    STRING          reduce using rule 8 (stmt -> CONTINUE .)
    NEG             reduce using rule 8 (stmt -> CONTINUE .)
    $end            reduce using rule 8 (stmt -> CONTINUE .)
    ELSE            reduce using rule 8 (stmt -> CONTINUE .)
    ELSEIF          reduce using rule 8 (stmt -> CONTINUE .)
    END             reduce using rule 8 (stmt -> CONTINUE .)


state 9

    (9) stmt -> function_stmt .

    BREAK           reduce using rule 9 (stmt -> function_stmt .)
    CONTINUE        reduce using rule 9 (stmt -> function_stmt .)
    IF              reduce using rule 9 (stmt -> function_stmt .)
    WHILE           reduce using rule 9 (stmt -> function_stmt .)
    FUNCTION        reduce using rule 9 (stmt -> function_stmt .)
    LPAREN          reduce using rule 9 (stmt -> function_stmt .)
    ID              reduce using rule 9 (stmt -> function_stmt .)
    NUMBER          reduce using rule 9 (stmt -> function_stmt .)
    STRING          reduce using rule 9 (stmt -> function_stmt .)
    NEG             reduce using rule 9 (stmt -> function_stmt .)
    $end            reduce using rule 9 (stmt -> function_stmt .)
    ELSE            reduce using rule 9 (stmt -> function_stmt .)
    ELSEIF          reduce using rule 9 (stmt -> function_stmt .)
    END             reduce using rule 9 (stmt -> function_stmt .)


state 10

    (10) expr_stmt -> expr . SEMI
    (32) expr2 -> expr . LT expr
    (33) expr2 -> expr . AND expr
    (34) expr2 -> expr . DIV expr
    (35) expr2 -> expr . POW expr
    (36) expr2 -> expr . GE expr
    (37) expr2 -> expr . GT expr
    (38) expr2 -> expr . LE expr
    (39) expr2 -> expr . MINUS expr
    (40) expr2 -> expr . MUL expr
    (41) expr2 -> expr . OR expr
    (42) expr2 -> expr . PLUS expr
    (43) expr2 -> expr . EQ expr
    (44) expr2 -> expr . EQEQ expr

    SEMI            shift and go to state 23
    LT              shift and go to state 24
    AND             shift and go to state 25
    DIV             shift and go to state 26
    POW             shift and go to state 27
    GE              shift and go to state 28
    GT              shift and go to state 29
    LE              shift and go to state 30
    MINUS           shift and go to state 31
    MUL             shift and go to state 32
    OR              shift and go to state 33
    PLUS            shift and go to state 34
    EQ              shift and go to state 35
    EQEQ            shift and go to state 36


state 11

    (45) if_stmt -> IF . expr stmt_list_opt elseif_stmt END
    (19) expr -> . LPAREN expr RPAREN
    (20) expr -> . function_call
    (21) expr -> . ID
    (22) expr -> . NUMBER
    (23) expr -> . STRING
    (24) expr -> . expr1
    (25) expr -> . expr2
    (26) function_call -> . ID LPAREN expr_list_opt RPAREN
    (31) expr1 -> . NEG expr
    (32) expr2 -> . expr LT expr
    (33) expr2 -> . expr AND expr
    (34) expr2 -> . expr DIV expr
    (35) expr2 -> . expr POW expr
    (36) expr2 -> . expr GE expr
    (37) expr2 -> . expr GT expr
    (38) expr2 -> . expr LE expr
    (39) expr2 -> . expr MINUS expr
    (40) expr2 -> . expr MUL expr
    (41) expr2 -> . expr OR expr
    (42) expr2 -> . expr PLUS expr
    (43) expr2 -> . expr EQ expr
    (44) expr2 -> . expr EQEQ expr

    LPAREN          shift and go to state 15
    ID              shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    NEG             shift and go to state 21

    expr                           shift and go to state 37
    function_call                  shift and go to state 16
    expr1                          shift and go to state 19
    expr2                          shift and go to state 20

state 12

    (1) while_stmt -> WHILE . expr stmt_list END
    (19) expr -> . LPAREN expr RPAREN
    (20) expr -> . function_call
    (21) expr -> . ID
    (22) expr -> . NUMBER
    (23) expr -> . STRING
    (24) expr -> . expr1
    (25) expr -> . expr2
    (26) function_call -> . ID LPAREN expr_list_opt RPAREN
    (31) expr1 -> . NEG expr
    (32) expr2 -> . expr LT expr
    (33) expr2 -> . expr AND expr
    (34) expr2 -> . expr DIV expr
    (35) expr2 -> . expr POW expr
    (36) expr2 -> . expr GE expr
    (37) expr2 -> . expr GT expr
    (38) expr2 -> . expr LE expr
    (39) expr2 -> . expr MINUS expr
    (40) expr2 -> . expr MUL expr
    (41) expr2 -> . expr OR expr
    (42) expr2 -> . expr PLUS expr
    (43) expr2 -> . expr EQ expr
    (44) expr2 -> . expr EQEQ expr

    LPAREN          shift and go to state 15
    ID              shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    NEG             shift and go to state 21

    expr                           shift and go to state 38
    function_call                  shift and go to state 16
    expr1                          shift and go to state 19
    expr2                          shift and go to state 20

state 13

    (11) function_stmt -> FUNCTION . ID EQ function_declr stmt_list END

    ID              shift and go to state 39


state 14

    (21) expr -> ID .
    (26) function_call -> ID . LPAREN expr_list_opt RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    SEMI            reduce using rule 21 (expr -> ID .)
    LT              reduce using rule 21 (expr -> ID .)
    AND             reduce using rule 21 (expr -> ID .)
    DIV             reduce using rule 21 (expr -> ID .)
    POW             reduce using rule 21 (expr -> ID .)
    GE              reduce using rule 21 (expr -> ID .)
    GT              reduce using rule 21 (expr -> ID .)
    LE              reduce using rule 21 (expr -> ID .)
    MINUS           reduce using rule 21 (expr -> ID .)
    MUL             reduce using rule 21 (expr -> ID .)
    OR              reduce using rule 21 (expr -> ID .)
    PLUS            reduce using rule 21 (expr -> ID .)
    EQ              reduce using rule 21 (expr -> ID .)
    EQEQ            reduce using rule 21 (expr -> ID .)
    BREAK           reduce using rule 21 (expr -> ID .)
    CONTINUE        reduce using rule 21 (expr -> ID .)
    IF              reduce using rule 21 (expr -> ID .)
    WHILE           reduce using rule 21 (expr -> ID .)
    FUNCTION        reduce using rule 21 (expr -> ID .)
    ID              reduce using rule 21 (expr -> ID .)
    NUMBER          reduce using rule 21 (expr -> ID .)
    STRING          reduce using rule 21 (expr -> ID .)
    NEG             reduce using rule 21 (expr -> ID .)
    ELSE            reduce using rule 21 (expr -> ID .)
    ELSEIF          reduce using rule 21 (expr -> ID .)
    END             reduce using rule 21 (expr -> ID .)
    RPAREN          reduce using rule 21 (expr -> ID .)
    COMMA           reduce using rule 21 (expr -> ID .)
    LPAREN          shift and go to state 40

  ! LPAREN          [ reduce using rule 21 (expr -> ID .) ]


state 15

    (19) expr -> LPAREN . expr RPAREN
    (19) expr -> . LPAREN expr RPAREN
    (20) expr -> . function_call
    (21) expr -> . ID
    (22) expr -> . NUMBER
    (23) expr -> . STRING
    (24) expr -> . expr1
    (25) expr -> . expr2
    (26) function_call -> . ID LPAREN expr_list_opt RPAREN
    (31) expr1 -> . NEG expr
    (32) expr2 -> . expr LT expr
    (33) expr2 -> . expr AND expr
    (34) expr2 -> . expr DIV expr
    (35) expr2 -> . expr POW expr
    (36) expr2 -> . expr GE expr
    (37) expr2 -> . expr GT expr
    (38) expr2 -> . expr LE expr
    (39) expr2 -> . expr MINUS expr
    (40) expr2 -> . expr MUL expr
    (41) expr2 -> . expr OR expr
    (42) expr2 -> . expr PLUS expr
    (43) expr2 -> . expr EQ expr
    (44) expr2 -> . expr EQEQ expr

    LPAREN          shift and go to state 15
    ID              shift and go to state 14
    NUMBER          shift and go to state 17
    STRING          shift and go to state 18
    NEG             shift and go to state 21

    expr                           shift and go to state 41
    function_call                  shift and go to state 16
    expr1                          shift and go to state 19
    expr2                          shift and go to state 20

state 16

    (20) expr -> function_call .

    SEMI            reduce using rule 20 (expr -> function_call .)
    LT              reduce using rule 20 (expr -> function_call .)
    AND             reduce using rule 20 (expr -> function_call .)
    DIV             reduce using rule 20 (expr -> function_call .)
    POW             reduce using rule 20 (expr -> function_call .)
    GE              reduce using rule 20 (expr -> function_call .)
    GT              reduce using rule 20 (expr -> function_call .)
    LE              reduce using rule 20 (expr -> function_call .)
    MINUS           reduce using rule 20 (expr -> function_call .)
    MUL             reduce using rule 20 (expr -> function_call .)
    OR              reduce using rule 20 (expr -> function_call .)
    PLUS            reduce using rule 20 (expr -> function_call .)
    EQ              reduce using rule 20 (expr -> function_call .)
    EQEQ            reduce using rule 20 (expr -> function_call .)
    BREAK           reduce using rule 20 (expr -> function_call .)
    CONTINUE        reduce using rule 20 (expr -> function_call .)
    IF              reduce using rule 20 (expr -> function_call .)
    WHILE           reduce using rule 20 (expr -> function_call .)
    FUNCTION        reduce using rule 20 (expr -> function_call .)
    LPAREN          reduce using rule 20 (expr -> function_call .)
    ID              reduce using rule 20 (expr -> function_call .)
    NUMBER          reduce using rule 20 (expr -> function_call .)
    STRING          reduce using rule 20 (expr -> function_call .)
    NEG             reduce using rule 20 (expr -> function_call .)
    ELSE            reduce using rule 20 (expr -> function_call .)
    ELSEIF          reduce using rule 20 (expr -> function_call .)
    END             reduce using rule 20 (expr -> function_call .)
    RPAREN          reduce using rule 20 (expr -> function_call .)
    COMMA           reduce using rule 20 (expr -> function_call .)


state 17

    (22) expr -> NUMBER .

    SEMI            reduce using rule 22 (expr -> NUMBER .)
    LT              reduce using rule 22 (expr -> NUMBER .)
    AND             reduce using rule 22 (expr -> NUMBER .)
    DIV             reduce using rule 22 (expr -> NUMBER .)
    POW             reduce using rule 22 (expr -> NUMBER .)
    GE              reduce using rule 22 (expr -> NUMBER .)
    GT              reduce using rule 22 (expr -> NUMBER .)
    LE              reduce using rule 22 (expr -> NUMBER .)
    MINUS           reduce using rule 22 (expr -> NUMBER .)
    MUL             reduce using rule 22 (expr -> NUMBER .)
    OR              reduce using rule 22 (expr -> NUMBER .)
    PLUS            reduce using rule 22 (expr -> NUMBER .)
    EQ              reduce using rule 22 (expr -> NUMBER .)
    EQEQ            reduce using rule 22 (expr -> NUMBER .)
    BREAK           reduce using rule 22 (expr -> NUMBER .)
    CONTINUE        reduce using rule 22 (expr -> NUMBER .)
    IF              reduce using rule 22 (expr -> NUMBER .)
    WHILE           reduce using rule 22 (expr -> NUMBER .)
    FUNCTION        reduce using rule 22 (expr -> NUMBER .)
    LPAREN          reduce using rule 22 (expr -> NUMBER .)
    ID              reduce using rule 22 (expr -> NUMBER .)
    NUMBER          reduce using rule 22 (expr -> NUMBER .)
    STRING          reduce using rule 22 (expr -> NUMBER .)
    NEG             reduce using rule 22 (expr -> NUMBER .)
    ELSE            reduce using rule 22 (expr -> NUMBER .)
    ELSEIF          reduce using rule 22 (expr -> NUMBER .)
    END             reduce using rule 22 (expr -> NUMBER .)
    RPAREN          reduce using rule 22 (expr -> NUMBER .)
    COMMA           reduce using rule 22 (expr -> NUMBER .)


state 18

    (23) expr -> STRING .

    SEMI            reduce using rule 23 (expr -> STRING .)
    LT              reduce using rule 23 (expr -> STRING .)
    AND             reduce using rule 23 (expr -> STRING .)
    DIV             reduce using rule 23 (expr -> STRING .)
    POW             reduce using rule 23 (expr -> STRING .)
    GE              reduce using rule 23 (expr -> STRING .)
    GT              reduce using rule 23 (expr -> STRING .)
    LE              reduce using rule 23 (expr -> STRING .)
    MINUS           reduce using rule 23 (expr -> STRING .)
    MUL             reduce using rule 23 (expr -> STRING .)
    OR              reduce using rule 23 (expr -> STRING .)
    PLUS            reduce using rule 23 (expr -> STRING .)
    EQ              reduce using rule 23 (expr -> STRING .)
    EQEQ            reduce using rule 23 (expr -> STRING .)
    BREAK           reduce using rule 23 (expr -> STRING .)
    CONTINUE        reduce using rule 23 (expr -> STRING .)
    IF              reduce using rule 23 (expr -> STRING .)
    WHILE           reduce using rule 23 (expr -> STRING .)
    FUNCTION        reduce using rule 23 (expr -> STRING .)
    LPAREN          reduce using rule 23 (expr -> STRING .)
    ID              reduce using rule 23 (expr -> STRING .)
    NUMBER          reduce using rule 23 (expr -> STRING .)
    STRING          reduce using rule 23 (expr -> STRING .)
    NEG             reduce using rule 23 (expr -> STRING .)
    ELSE            reduce using rule 23 (expr -> STRING .)
    ELSEIF          reduce using rule 23 (expr -> STRING .)
    END             reduce using rule 23 (expr -> STRING .)
    RPAREN          reduce using rule 23 (expr -> STRING .)
    COMMA           reduce using rule 23 (expr -> STRING .)


state 19

    (24) expr -> expr1 .
